[package]
include = ["enpyronments/*"]

[tool.poetry]
name = "enpyronments"
version = "0.1.1"
description = "A settings loading library inspired by Django and Node.js"
authors = ["Stephen Lowery <slowery@markelcorp.com>"]
repository = "https://github.com/stephen1000/enpyronments"
keywords = ['environment','settings','enpyronments']

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pylint = "^2.3"
black = {version = "^18.3-alpha.0", allows-prereleases = true}
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
